--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,17 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>
-        <a href="/">Just Tech News</a>
-      </h1>
-    </header>
+    <h1>
+      <a href="/">Just Tech News</a>
+    </h1>
+    {{!-- <nav>
+      <a href="/login">login</a>
+    </nav> --}}
+    <nav>
+  <button id="logout" class="btn-no-style">logout</button>
+  <a href="/login">login</a>
+</nav>
+  </header>
     <main>
       {{{ body }}}
     </main>
