--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,3 +1,12 @@
+<form class="comment-form">
+  <div>
+    <textarea name="comment-body"></textarea>
+  </div>
+
+  <div>
+    <button type="submit">add comment</button>
+  </div>
+</form>
 <div class="comments">
   {{#each this}}
   <section class="comment">
